feat: ptbr resume

--- a/en/resume.tex
+++ b/en/resume.tex
@@ -159,7 +159,7 @@ parsep=0.10 cm, partopsep=0pt, itemsep=0pt, leftmargin=10pt ] }{ \end{itemize} }
 	\vspace{0.10 cm}
 	\begin{onecolentry}
 		\begin{highlights}
-			\item Developed and maintained hp.dev portal, delivering releases weekly with a high-level team of full stack engineers. React, Vite, GraphQL, Backstage, Express, NodeJS \%
+			\item Developed and maintained hp.dev portal, delivering releases weekly with a high-level team of full stack engineers. React, Vite, GraphQL, Backstage, Express, NodeJS
 			\item Increase unit test coverage by 67\% and integration test coverage by 45\% in the last quarter of 2024 - React Testing Library, Jest.
 			\item Worked on the ApiM project, a new API management platform for HP, using Apigee, Harbor, Azure, Java, Spring Boot, Docker, Clean Architeture, SOLID.
             \item Whole development of a new pipeline to deploy target servers on the Apigee uploading just a JSON file, reducing the deployment time of new API's by 73\%.
